.tmp/LPR-001/red-output.txt
    Blocking waiting for file lock on artifact directory
   Compiling but-db v0.0.0 (/Users/justinrich/Projects/gitbutler/crates/but-db)
error[E0061]: this method takes 2 arguments but 3 arguments were supplied
   --> crates/but-db/tests/db/table/local_review_assignments.rs:86:10
    |
 86 |         .set_state("refs/heads/feat", "rev", "changes_requested")?;
    |          ^^^^^^^^^                           ------------------- unexpected argument #3 of type `&'static str`
    |
note: method defined here
   --> crates/but-db/src/table/local_review_assignments.rs:118:12
    |
118 |     pub fn set_state(&mut self, id: &str, state: &str) -> rusqlite::Result<()> {
    |            ^^^^^^^^^
help: remove the extra argument
    |
 86 -         .set_state("refs/heads/feat", "rev", "changes_requested")?;
 86 +         .set_state("refs/heads/feat", "rev")?;
    |

error[E0061]: this method takes 3 arguments but 2 arguments were supplied
   --> crates/but-db/tests/db/table/local_review_comments.rs:112:36
    |
112 |     db.local_review_comments_mut().set_resolved("t1", true)?;
    |                                    ^^^^^^^^^^^^       ---- argument #2 of type `&str` is missing
    |
note: method defined here
   --> crates/but-db/src/table/local_review_comments.rs:155:12
    |
155 |     pub fn set_resolved(
    |            ^^^^^^^^^^^^
help: provide the argument
    |
112 |     db.local_review_comments_mut().set_resolved("t1", /* &str */, true)?;
    |                                                       +++++++++++

For more information about this error, try `rustc --explain E0061`.
error: could not compile `but-db` (test "db") due to 2 previous errors
